data/derived/fa15/progs/unify/prog1681.ml.out
Characters 19-27:
  let _ = helper("0",makeRand, 5);;;
                     ^^^^^^^^
Error: This expression has type int * int -> int * int -> int
       but an expression was expected of type int * int -> int
       Type int * int -> int is not compatible with type int 
